Fixed bottom Nav on mobile devices
Also made the mobile text just a tad smaller, but still very readable.

--- a/alt final project html/protosite/mobile.css
+++ b/alt final project html/protosite/mobile.css
@@ -1,3 +1,7 @@
 #main_header, #main_content {
-    font-size: 220% !important;
+    font-size: 200% !important;
+}
+
+#bottom_nav{
+  margin-top:20px;
 }
